create hero section

--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -8,9 +9,55 @@
     <link rel="stylesheet" href="./css/utils.css">
     <link rel="stylesheet" href="./css/style.css">
 
+    <!-- font awesome  -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css"
+        integrity="sha512-+4zCK9k+qNFUR5X+cKL9EIR+ZOhtIloNl9GIKS57V1MyNsYpYcUrUeQc9vNfzsWfV28IaLL3i96P9sdNyeRssA=="
+        crossorigin="anonymous" />
+
+    <!-- google fonts  -->
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Quicksand:wght@300;400;500;600&display=swap" rel="stylesheet">
+
     <title>DAKSH STUDY CIRCLE</title>
 </head>
+
 <body>
-    <h1>DAKSH</h1>
+    <header>
+        <div class="overlay"></div>
+        <div class="header-top">
+            <div class="container">
+                <div class="d-flex justify-content-between align-items-centre">
+                    <div class="header-top-social">
+                        <a href=""><i class="fab fa-facebook-square" aria-hidden="true"></i></a>
+                        <a href=""><i class="fab fa-twitter" aria-hidden="true"></i></a>
+                        <a href=""><i class="fab fa-instagram" aria-hidden="true"></i></a>
+                        <a href=""><i class="fab fa-youtube" aria-hidden="true"></i></a>
+                    </div>
+                    <div class="logo-unit d-flex justify-content-between align-items-centre">
+                        <img src="./images/20200522_112057.png" alt="daksh-logo">
+                        <h1>DAKSH <span>STUDY CIRCLE</span></h1>
+                    </div>
+                    <div class="header-top-phone d-flex justify-content-between align-items-centre">
+                        <i class="phone-icon"><img src="./images/phone-call.svg" alt="daksh-contact"></i>
+                        <h3>+91 9818824279</h3>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+        <!-- navigation -->
+        <div class="container">
+            <nav class="navbar">
+                <ul>
+                    <li><a href="#">Home</a></li>
+                    <li><a href="#">Courses</a></li>
+                    <li><a href="#">About Us</a></li>
+                    <li><a href="#">Teachers</a></li>
+                    <li><a href="#">Contact Us</a></li>
+                </ul>
+            </nav>
+        </div>
+    </header>
 </body>
+
 </html>
