--- a/index.html
+++ b/index.html
@@ -48,12 +48,14 @@
         <!-- navigation -->
         <div class="container">
             <nav class="navbar">
-                <ul>
-                    <li><a href="#">Home</a></li>
-                    <li><a href="#">Courses</a></li>
-                    <li><a href="#">About Us</a></li>
-                    <li><a href="#">Teachers</a></li>
-                    <li><a href="#">Contact Us</a></li>
+                <ul class="d-flex justify-content-between align-items-centre">
+                    <li><a href="#">Home</a><div class="magic-line"></div></li>
+                    <li><a href="#">Gallery</a><div class="magic-line"></div></li>
+                    <li><a href="#">Courses</a><div class="magic-line"></div></li>
+                    <li><a href="#">Video</a><div class="magic-line"></div></li>
+                    <li><a href="#">About Us</a><div class="magic-line"></div></li>
+                    <li><a href="#">Teachers</a><div class="magic-line"></div></li>
+                    <li><a href="#">Contact Us</a><div class="magic-line"></div></li>
                 </ul>
             </nav>
         </div>
