--- a/index.html
+++ b/index.html
@@ -49,15 +49,24 @@
         <div class="container">
             <nav class="navbar">
                 <ul class="d-flex justify-content-between align-items-centre">
-                    <li><a href="#">Home</a><div class="magic-line"></div></li>
-                    <li><a href="#">Gallery</a><div class="magic-line"></div></li>
-                    <li><a href="#">Courses</a><div class="magic-line"></div></li>
-                    <li><a href="#">Video</a><div class="magic-line"></div></li>
-                    <li><a href="#">About Us</a><div class="magic-line"></div></li>
-                    <li><a href="#">Teachers</a><div class="magic-line"></div></li>
-                    <li><a href="#">Contact Us</a><div class="magic-line"></div></li>
+                    <li><a href="#">Home</a><div class="magic-line line-visible" style="max-width: 48.3px;"></div><div class="magic-triangle triangle-visible"></div></li>
+                    <li><a href="#">Gallery</a><div class="magic-line" style="max-width: 73.10px;"></div><div class="magic-triangle" style="left: 26.5%;"></div></li>
+                    <li><a href="#">Courses</a><div class="magic-line" style="max-width: 77.19px;"></div><div class="magic-triangle" style="left: 37%;"></div></li>
+                    <li><a href="#">Video</a><div class="magic-line" style="max-width: 51.73px;"></div><div class="magic-triangle" style="left: 46.5%;"></div></li>
+                    <li><a href="#">About Us</a><div class="magic-line" style="max-width: 85.04px;"></div><div class="magic-triangle" style="left: 56.5%;"></div></li>
+                    <li><a href="#">Teachers</a><div class="magic-line" style="max-width: 86.08px;"></div><div class="magic-triangle" style="left: 68%;"></div></li>
+                    <li><a href="#">Contact Us</a><div class="magic-line" style="max-width: 106.03px;"></div><div class="magic-triangle" style="left: 80.5%;"></div></li>
                 </ul>
             </nav>
+        </div>
+
+        <!-- hero intro  -->
+
+        <div class="container">
+            <div class="intro">
+                <h1>Take the first step</h1>
+                <h1> to knowledge with us </h1>
+            </div>
         </div>
     </header>
 </body>
