hero section complete

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
                     </div>
                     <div class="logo-unit d-flex justify-content-between align-items-centre">
                         <img src="./images/20200522_112057.png" alt="daksh-logo">
-                        <h1>DAKSH <span>STUDY CIRCLE</span></h1>
+                        <h1><span>DAKSH </span>STUDY CIRCLE</h1>
                     </div>
                     <div class="header-top-phone d-flex justify-content-between align-items-centre">
                         <i class="phone-icon"><img src="./images/phone-call.svg" alt="daksh-contact"></i>
@@ -49,13 +49,34 @@
         <div class="container">
             <nav class="navbar">
                 <ul class="d-flex justify-content-between align-items-centre">
-                    <li><a href="#">Home</a><div class="magic-line line-visible" style="max-width: 48.3px;"></div><div class="magic-triangle triangle-visible"></div></li>
-                    <li><a href="#">Gallery</a><div class="magic-line" style="max-width: 73.10px;"></div><div class="magic-triangle" style="left: 26.5%;"></div></li>
-                    <li><a href="#">Courses</a><div class="magic-line" style="max-width: 77.19px;"></div><div class="magic-triangle" style="left: 37%;"></div></li>
-                    <li><a href="#">Video</a><div class="magic-line" style="max-width: 51.73px;"></div><div class="magic-triangle" style="left: 46.5%;"></div></li>
-                    <li><a href="#">About Us</a><div class="magic-line" style="max-width: 85.04px;"></div><div class="magic-triangle" style="left: 56.5%;"></div></li>
-                    <li><a href="#">Teachers</a><div class="magic-line" style="max-width: 86.08px;"></div><div class="magic-triangle" style="left: 68%;"></div></li>
-                    <li><a href="#">Contact Us</a><div class="magic-line" style="max-width: 106.03px;"></div><div class="magic-triangle" style="left: 80.5%;"></div></li>
+                    <li><a href="#">Home</a>
+                        <div class="magic-line line-visible" style="max-width: 48.3px;"></div>
+                        <div class="magic-triangle triangle-visible"></div>
+                    </li>
+                    <li><a href="#">Courses</a>
+                        <div class="magic-line" style="max-width: 77.19px;"></div>
+                        <div class="magic-triangle" style="left: 37%;"></div>
+                    </li>
+                    <li><a href="#">Gallery</a>
+                        <div class="magic-line" style="max-width: 73.10px;"></div>
+                        <div class="magic-triangle" style="left: 26.5%;"></div>
+                    </li>
+                    <li><a href="#">Video</a>
+                        <div class="magic-line" style="max-width: 51.73px;"></div>
+                        <div class="magic-triangle" style="left: 46.5%;"></div>
+                    </li>
+                    <li><a href="#">About Us</a>
+                        <div class="magic-line" style="max-width: 85.04px;"></div>
+                        <div class="magic-triangle" style="left: 56.5%;"></div>
+                    </li>
+                    <li><a href="#">Teachers</a>
+                        <div class="magic-line" style="max-width: 86.08px;"></div>
+                        <div class="magic-triangle" style="left: 68%;"></div>
+                    </li>
+                    <li><a href="#">Contact Us</a>
+                        <div class="magic-line" style="max-width: 106.03px;"></div>
+                        <div class="magic-triangle" style="left: 80.5%;"></div>
+                    </li>
                 </ul>
             </nav>
         </div>
@@ -63,9 +84,13 @@
         <!-- hero intro  -->
 
         <div class="container">
-            <div class="intro">
+            <div class="intro text-centre">
+                <h3>Welcome to <span>DAKSH</span></h3>
                 <h1>Take the first step</h1>
                 <h1> to knowledge with us </h1>
+            </div>
+            <div class="explore-btn text-centre">
+                <a href="#"><span>Explore Courses</span></a>
             </div>
         </div>
     </header>
