courses section complete

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 
     <!-- google fonts  -->
     <link rel="preconnect" href="https://fonts.gstatic.com">
-    <link href="https://fonts.googleapis.com/css2?family=Quicksand:wght@300;400;500;600&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Quicksand:wght@300;400;500;600;700&display=swap" rel="stylesheet">
 
     <title>DAKSH STUDY CIRCLE</title>
 </head>
@@ -94,6 +94,61 @@
             </div>
         </div>
     </header>
+
+    <!-- Courses -->
+
+    <div class="courses">
+        <h1>Choose your class or stream</h1>
+        <div class="container d-flex justify-content-between align-items-centre paddinglr">
+            <div class="cards yellow">
+                <a href="#">
+                    <img src="./images/9.svg" alt="9th">
+                    <h3>9th</h3>
+                </a>
+            </div>
+            <div class="cards" style="background-color: #307ad5;">
+                <a href="#">
+                    <img src="./images/SPRK_default_preset_name_custom – 1.svg" style="width: 115px;" alt="10th">
+                    <h3>10th</h3>
+                </a>
+            </div>
+            <div class="cards light-blue">
+                <a href="#">
+                    <img src="./images/paint-palette.svg" alt="arts">
+                    <h3>Arts</h3>
+                </a>
+            </div>
+            <div class="cards green">
+                <a href="#">
+                    <img src="./images/microscope.svg" alt="science">
+                    <h3>Science</h3>
+                </a>
+            </div>
+            <div class="cards" style="background-color: #d94da6;">
+                <a href="#">
+                    <img src="./images/bda433ad735d49f2ad7a9ee5f5d76deb.svg" alt="commerce">
+                    <h3>Commerce</h3>
+                </a>
+            </div>
+        </div>
+    </div>
+
+    <div class="directors-message d-flex justify-content-between">
+        <div class="director-img"></div>
+        <div class="message">
+            <h3>Director message</h3>
+            <hr>
+            <h1>It Is Never To Late To Learn</h1>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Impedit nemo corporis blanditiis consequuntur
+                consectetur! Nemo cupiditate ipsam deleniti officiis nisi, voluptatibus dolores consequuntur, commodi
+                iusto voluptate labore inventore adipisci neque officia tempora id eaque suscipit qui corporis est quo.
+                Deserunt officia aperiam maiores nisi inventore architecto laborum nulla suscipit alias.
+            </p>
+            <div class="explore-btn explore-btn-message text-centre">
+                <a href="#"><span>Explore Courses</span></a>
+            </div>
+        </div>
+    </div>
 </body>
 
 </html>
