--- a/index.html
+++ b/index.html
@@ -16,7 +16,8 @@
 
     <!-- google fonts  -->
     <link rel="preconnect" href="https://fonts.gstatic.com">
-    <link href="https://fonts.googleapis.com/css2?family=Quicksand:wght@300;400;500;600;700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Quicksand:wght@300;400;500;600;700&display=swap"
+        rel="stylesheet">
 
     <title>DAKSH STUDY CIRCLE</title>
 </head>
@@ -136,8 +137,7 @@
     <div class="directors-message d-flex justify-content-between">
         <div class="director-img"></div>
         <div class="message">
-            <h3>Director message</h3>
-            <hr>
+            <h3>Director - Anil Kumar</h3>
             <h1>It Is Never To Late To Learn</h1>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Impedit nemo corporis blanditiis consequuntur
                 consectetur! Nemo cupiditate ipsam deleniti officiis nisi, voluptatibus dolores consequuntur, commodi
@@ -146,6 +146,26 @@
             </p>
             <div class="explore-btn explore-btn-message text-centre">
                 <a href="#"><span>Explore Courses</span></a>
+            </div>
+        </div>
+    </div>
+
+    <!-- Gallery section  -->
+
+    <div class="container gallery-container">
+        <h1>Gallery</h1>
+        <div class="gallery">
+            <div class="gallery-grid">
+                <img src="https://picsum.photos/200?random=1" alt="random">
+                <img src="https://picsum.photos/200?random=2" alt="random">
+                <img src="https://picsum.photos/200?random=3" alt="random">
+                <img src="https://picsum.photos/200?random=4" alt="random">
+                <img src="https://picsum.photos/200?random=5" alt="random">
+                <img src="https://picsum.photos/200?random=6" alt="random">
+                <img src="https://picsum.photos/200?random=7" alt="random">
+                <img src="https://picsum.photos/200?random=8" alt="random">
+                <img src="https://picsum.photos/200?random=9" alt="random">
+                <img src="https://picsum.photos/200?random=10" alt="random">
             </div>
         </div>
     </div>
