--- a/index.html
+++ b/index.html
@@ -154,21 +154,109 @@
 
     <div class="container gallery-container">
         <h1>Gallery</h1>
-        <div class="gallery">
-            <div class="gallery-grid">
-                <img src="https://picsum.photos/200?random=1" alt="random">
-                <img src="https://picsum.photos/200?random=2" alt="random">
-                <img src="https://picsum.photos/200?random=3" alt="random">
-                <img src="https://picsum.photos/200?random=4" alt="random">
-                <img src="https://picsum.photos/200?random=5" alt="random">
-                <img src="https://picsum.photos/200?random=6" alt="random">
-                <img src="https://picsum.photos/200?random=7" alt="random">
-                <img src="https://picsum.photos/200?random=8" alt="random">
-                <img src="https://picsum.photos/200?random=9" alt="random">
-                <img src="https://picsum.photos/200?random=10" alt="random">
+
+        <!-- Slideshow container -->
+        <div class="slideshow-container">
+
+            <!-- Full-width images with number and caption text -->
+            <div class="mySlides fade">
+                <div class="numbertext">1 / 3</div>
+                <div class="gallery-grid">
+                    <img src="https://picsum.photos/200?random=1" alt="random">
+                    <img src="https://picsum.photos/200?random=2" alt="random">
+                    <img src="https://picsum.photos/200?random=3" alt="random">
+                    <img src="https://picsum.photos/200?random=4" alt="random">
+                    <img src="https://picsum.photos/200?random=5" alt="random">
+                    <img src="https://picsum.photos/200?random=6" alt="random">
+                    <img src="https://picsum.photos/200?random=7" alt="random">
+                    <img src="https://picsum.photos/200?random=8" alt="random">
+                    <img src="https://picsum.photos/200?random=9" alt="random">
+                    <img src="https://picsum.photos/200?random=10" alt="random">
+                </div>
             </div>
+
+            <div class="mySlides fade">
+                <div class="numbertext">2 / 3</div>
+                <div class="gallery-grid">
+                    <img src="https://picsum.photos/200?random=11" alt="random">
+                    <img src="https://picsum.photos/200?random=12" alt="random">
+                    <img src="https://picsum.photos/200?random=13" alt="random">
+                    <img src="https://picsum.photos/200?random=14" alt="random">
+                    <img src="https://picsum.photos/200?random=15" alt="random">
+                    <img src="https://picsum.photos/200?random=16" alt="random">
+                    <img src="https://picsum.photos/200?random=17" alt="random">
+                    <img src="https://picsum.photos/200?random=18" alt="random">
+                    <img src="https://picsum.photos/200?random=19" alt="random">
+                    <img src="https://picsum.photos/200?random=20" alt="random">
+                </div>
+            </div>
+
+            <div class="mySlides fade">
+                <div class="numbertext">3 / 3</div>
+                <div class="gallery-grid">
+                    <img src="https://picsum.photos/200?random=21" alt="random">
+                    <img src="https://picsum.photos/200?random=22" alt="random">
+                    <img src="https://picsum.photos/200?random=23" alt="random">
+                    <img src="https://picsum.photos/200?random=24" alt="random">
+                    <img src="https://picsum.photos/200?random=25" alt="random">
+                    <img src="https://picsum.photos/200?random=26" alt="random">
+                    <img src="https://picsum.photos/200?random=27" alt="random">
+                    <img src="https://picsum.photos/200?random=28" alt="random">
+                    <img src="https://picsum.photos/200?random=29" alt="random">
+                    <img src="https://picsum.photos/200?random=30" alt="random">
+                </div>
+            </div>
+
+            <!-- Next and previous buttons -->
+            <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
+            <a class="next" onclick="plusSlides(1)">&#10095;</a>
+        </div>
+        <br>
+
+        <!-- The dots/circles -->
+        <div style="text-align:center">
+            <span class="dot" onclick="currentSlide(1)"></span>
+            <span class="dot" onclick="currentSlide(2)"></span>
+            <span class="dot" onclick="currentSlide(3)"></span>
         </div>
     </div>
+
+
+    <!-- youtube video section  -->
+
+    <div class="container">
+        <div class="yt-playlists">
+            <h1>Youtube Video Playlists</h1>
+            <iframe width="560" height="315"
+                src="https://www.youtube.com/embed/videoseries?list=PL1U-FkOAme7YhCHy2Lf5rd1m1QjDQ5H5A" frameborder="0"
+                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+                allowfullscreen></iframe>
+            <iframe width="560" height="315"
+                src="https://www.youtube.com/embed/videoseries?list=PL1U-FkOAme7YKYV3l0377G8GQ81RLmcLL" frameborder="0"
+                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+                allowfullscreen></iframe>
+            <iframe width="560" height="315"
+                src="https://www.youtube.com/embed/videoseries?list=PL1U-FkOAme7Z8fDk2XWvn-iGSdglsVkQy" frameborder="0"
+                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+                allowfullscreen></iframe>
+            <iframe width="560" height="315"
+                src="https://www.youtube.com/embed/videoseries?list=PL1U-FkOAme7ZKO5pLGJ11gvRWwgPKHy3g" frameborder="0"
+                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+                allowfullscreen></iframe>
+            <iframe width="560" height="315"
+                src="https://www.youtube.com/embed/videoseries?list=PL1U-FkOAme7Zfuf7cDorbDMLDxJfEc6pM" frameborder="0"
+                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+                allowfullscreen></iframe>
+        </div>
+    </div>
+
+    <!-- About US Section   -->
+    <div class="about-us">
+        <div class="container">
+            <h1>Why choose us</h1>
+        </div>
+    </div>
+    <script src="./js/index.js"></script>
 </body>
 
 </html>
