--- a/index.html
+++ b/index.html
@@ -70,10 +70,10 @@
                         <div class="magic-line" style="max-width: 85.04px;"></div>
                         <div class="magic-triangle" style="left: 56.5%;"></div>
                     </li>
-                    <li><a href="#">Teachers</a>
+                    <!-- <li><a href="#">Teachers</a>
                         <div class="magic-line" style="max-width: 86.08px;"></div>
                         <div class="magic-triangle" style="left: 68%;"></div>
-                    </li>
+                    </li> -->
                     <li><a href="#">Contact Us</a>
                         <div class="magic-line" style="max-width: 106.03px;"></div>
                         <div class="magic-triangle" style="left: 80.5%;"></div>
@@ -156,104 +156,132 @@
         <h1>Gallery</h1>
 
         <!-- Slideshow container -->
-        <div class="slideshow-container">
-
-            <!-- Full-width images with number and caption text -->
-            <div class="mySlides fade">
-                <div class="numbertext">1 / 3</div>
-                <div class="gallery-grid">
-                    <img src="https://picsum.photos/200?random=1" alt="random">
-                    <img src="https://picsum.photos/200?random=2" alt="random">
-                    <img src="https://picsum.photos/200?random=3" alt="random">
-                    <img src="https://picsum.photos/200?random=4" alt="random">
-                    <img src="https://picsum.photos/200?random=5" alt="random">
-                    <img src="https://picsum.photos/200?random=6" alt="random">
-                    <img src="https://picsum.photos/200?random=7" alt="random">
-                    <img src="https://picsum.photos/200?random=8" alt="random">
-                    <img src="https://picsum.photos/200?random=9" alt="random">
-                    <img src="https://picsum.photos/200?random=10" alt="random">
+        <div class="carousel-container">
+            <a class="prev" id="prevBtn">&#10094;</a>
+            <a class="next" id="nextBtn">&#10095;</a>
+            <div class="carousel-slide">
+                <div>
+                    <div class="numbertext">3 / 3</div>
+                    <img src="./images/New folder/winter-4727156_1280.jpg" id="lastClone" alt="">
+                </div>
+                <div>
+                    <div class="numbertext">1 / 3</div>
+                    <img src="./images/New folder/geometry-1023846_1280.jpg" alt="">
+                </div>
+                <div>
+                    <div class="numbertext">2 / 3</div>
+                    <img src="./images/New folder/narrative-794978_1280.jpg" alt="">
+                </div>
+                <div>
+                    <div class="numbertext">3 / 3</div>
+                    <img src="./images/New folder/winter-4727156_1280.jpg" alt="">
+                </div>
+                <div>
+                    <div class="numbertext">1 / 3</div>
+                    <img src="./images/New folder/geometry-1023846_1280.jpg" id="firstClone" alt="">
                 </div>
             </div>
-
-            <div class="mySlides fade">
-                <div class="numbertext">2 / 3</div>
-                <div class="gallery-grid">
-                    <img src="https://picsum.photos/200?random=11" alt="random">
-                    <img src="https://picsum.photos/200?random=12" alt="random">
-                    <img src="https://picsum.photos/200?random=13" alt="random">
-                    <img src="https://picsum.photos/200?random=14" alt="random">
-                    <img src="https://picsum.photos/200?random=15" alt="random">
-                    <img src="https://picsum.photos/200?random=16" alt="random">
-                    <img src="https://picsum.photos/200?random=17" alt="random">
-                    <img src="https://picsum.photos/200?random=18" alt="random">
-                    <img src="https://picsum.photos/200?random=19" alt="random">
-                    <img src="https://picsum.photos/200?random=20" alt="random">
-                </div>
-            </div>
-
-            <div class="mySlides fade">
-                <div class="numbertext">3 / 3</div>
-                <div class="gallery-grid">
-                    <img src="https://picsum.photos/200?random=21" alt="random">
-                    <img src="https://picsum.photos/200?random=22" alt="random">
-                    <img src="https://picsum.photos/200?random=23" alt="random">
-                    <img src="https://picsum.photos/200?random=24" alt="random">
-                    <img src="https://picsum.photos/200?random=25" alt="random">
-                    <img src="https://picsum.photos/200?random=26" alt="random">
-                    <img src="https://picsum.photos/200?random=27" alt="random">
-                    <img src="https://picsum.photos/200?random=28" alt="random">
-                    <img src="https://picsum.photos/200?random=29" alt="random">
-                    <img src="https://picsum.photos/200?random=30" alt="random">
-                </div>
-            </div>
-
-            <!-- Next and previous buttons -->
-            <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
-            <a class="next" onclick="plusSlides(1)">&#10095;</a>
         </div>
-        <br>
-
         <!-- The dots/circles -->
-        <div style="text-align:center">
-            <span class="dot" onclick="currentSlide(1)"></span>
-            <span class="dot" onclick="currentSlide(2)"></span>
-            <span class="dot" onclick="currentSlide(3)"></span>
+        <div class="controls">
+            <ul class="dots" style="text-align: center;">
+                <li class="dot active"></li>
+                <li class="dot"></li>
+                <li class="dot"></li>
+            </ul>
         </div>
+
     </div>
+
 
 
     <!-- youtube video section  -->
 
-    <div class="container">
+    <div class="container playlist-container">
         <div class="yt-playlists">
             <h1>Youtube Video Playlists</h1>
-            <iframe width="560" height="315"
-                src="https://www.youtube.com/embed/videoseries?list=PL1U-FkOAme7YhCHy2Lf5rd1m1QjDQ5H5A" frameborder="0"
-                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
-                allowfullscreen></iframe>
-            <iframe width="560" height="315"
-                src="https://www.youtube.com/embed/videoseries?list=PL1U-FkOAme7YKYV3l0377G8GQ81RLmcLL" frameborder="0"
-                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
-                allowfullscreen></iframe>
-            <iframe width="560" height="315"
-                src="https://www.youtube.com/embed/videoseries?list=PL1U-FkOAme7Z8fDk2XWvn-iGSdglsVkQy" frameborder="0"
-                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
-                allowfullscreen></iframe>
-            <iframe width="560" height="315"
-                src="https://www.youtube.com/embed/videoseries?list=PL1U-FkOAme7ZKO5pLGJ11gvRWwgPKHy3g" frameborder="0"
-                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
-                allowfullscreen></iframe>
-            <iframe width="560" height="315"
-                src="https://www.youtube.com/embed/videoseries?list=PL1U-FkOAme7Zfuf7cDorbDMLDxJfEc6pM" frameborder="0"
-                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
-                allowfullscreen></iframe>
+            <div class="playlist">
+                <iframe width="500" height="250"
+                    src="https://www.youtube.com/embed/videoseries?list=PL1U-FkOAme7YhCHy2Lf5rd1m1QjDQ5H5A"
+                    frameborder="0"
+                    allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+                    allowfullscreen></iframe>
+                <iframe width="500" height="250"
+                    src="https://www.youtube.com/embed/videoseries?list=PL1U-FkOAme7Z8fDk2XWvn-iGSdglsVkQy"
+                    frameborder="0"
+                    allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+                    allowfullscreen></iframe>
+                <iframe width="500" height="250"
+                    src="https://www.youtube.com/embed/videoseries?list=PL1U-FkOAme7ZKO5pLGJ11gvRWwgPKHy3g"
+                    frameborder="0"
+                    allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+                    allowfullscreen></iframe>
+                <iframe width="500" height="250"
+                    src="https://www.youtube.com/embed/videoseries?list=PL1U-FkOAme7Zfuf7cDorbDMLDxJfEc6pM"
+                    frameborder="0"
+                    allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+                    allowfullscreen></iframe>
+            </div>
         </div>
     </div>
 
     <!-- About US Section   -->
     <div class="about-us">
-        <div class="container">
+        <div class="container about-us-container">
             <h1>Why choose us</h1>
+            <div class="topics topics-grid">
+                <div class="topic d-flex justify-content-between">
+                    <div class="circle yellow"><i class="fas fa-book" aria-hidden="true"></i></div>
+                    <div class="topic-text">
+                        <h3>Communicative Method</h3>
+                        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Sit minus natus quasi earum modi,
+                            aperiam quo.</p>
+                    </div>
+                </div>
+                <div class="topic d-flex justify-content-between">
+                    <div class="circle light-blue"><i class="fas fa-book" aria-hidden="true"></i></div>
+                    <div class="topic-text">
+                        <h3>Communicative Method</h3>
+                        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Sit minus natus quasi earum modi,
+                            aperiam quo.</p>
+                    </div>
+                </div>
+                <div class="topic d-flex justify-content-between">
+                    <div class="circle" style="background-color: #307ad5;"><i class="fas fa-book"
+                            aria-hidden="true"></i></div>
+                    <div class="topic-text">
+                        <h3>Communicative Method</h3>
+                        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Sit minus natus quasi earum modi,
+                            aperiam quo.</p>
+                    </div>
+                </div>
+                <div class="topic d-flex justify-content-between">
+                    <div class="circle" style="background-color: tomato;"><i class="fas fa-book" aria-hidden="true"></i>
+                    </div>
+                    <div class="topic-text">
+                        <h3>Communicative Method</h3>
+                        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Sit minus natus quasi earum modi,
+                            aperiam quo.</p>
+                    </div>
+                </div>
+                <div class="topic d-flex justify-content-between">
+                    <div class="circle green"><i class="fas fa-book" aria-hidden="true"></i></div>
+                    <div class="topic-text">
+                        <h3>Communicative Method</h3>
+                        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Sit minus natus quasi earum modi,
+                            aperiam quo.</p>
+                    </div>
+                </div>
+                <div class="topic d-flex justify-content-between">
+                    <div class="circle" style="background-color: #d94da6;"><i class="fas fa-book"
+                            aria-hidden="true"></i></div>
+                    <div class="topic-text">
+                        <h3>Communicative Method</h3>
+                        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Sit minus natus quasi earum modi,
+                            aperiam quo.</p>
+                    </div>
+                </div>
+            </div>
         </div>
     </div>
     <script src="./js/index.js"></script>
