create and complete footer section

--- a/index.html
+++ b/index.html
@@ -350,6 +350,57 @@
             </div>
         </div>
     </div>
+
+    <div class="footer">
+        <div class="container d-flex justify-content-between">
+            <div class="cousrses-link">
+                <h1>Courses</h1>
+                <ul>
+                    <li><a href="">9th Class</a></li>
+                    <li><a href="">10th Class</a></li>
+                    <li><a href="">Arts</a></li>
+                    <li><a href="">Science</a></li>
+                    <li><a href="">commerce</a></li>
+                </ul>
+            </div>
+            <div class="video-lectures">
+                <h1>Video lectures</h1>
+                <ul>
+                    <li><a href="">Basic Matks</a></li>
+                    <li><a href="">9th Maths</a></li>
+                    <li><a href="">10th Maths</a></li>
+                    <li><a href="">11th Maths</a></li>
+                    <li><a href="">12th Maths</a></li>
+                </ul>
+            </div>
+            <div class="quick-links">
+                <h1>Quick links</h1>
+                <ul>
+                    <li><a href="">About Us</a></li>
+                    <li><a href="">Contact Us</a></li>
+                    <!-- <li><a href=""></a></li> -->
+                </ul>
+            </div>
+            <div class="social-networks">
+                <h1>Social Network</h1>
+                <ul>
+                    <li><a href=""><i class="fab fa-facebook-square" aria-hidden="true"></i></a></li>
+                    <li><a href=""><i class="fab fa-twitter" aria-hidden="true"></i></a></li>
+                    <li><a href=""><i class="fab fa-instagram" aria-hidden="true"></i></a></li>
+                    <li><a href=""><i class="fab fa-youtube" aria-hidden="true"></i></a></li>
+                    <li><a href=""><i class="fab fa-whatsapp-square" aria-hidden="true"></i></a></li>
+                </ul>
+            </div>
+        </div>
+    </div>
+
+    <footer>
+        <div class="container">
+            <div class="copyright-text">
+                <h1>Copyright © 2020 Daksh Study Circle.</h1>
+            </div>
+        </div>
+    </footer>
     <script src="./js/index.js"></script>
 </body>
 
