some fixes in home page

--- a/index.html
+++ b/index.html
@@ -28,15 +28,15 @@
         <div class="header-top">
             <div class="container">
                 <div class="d-flex justify-content-between align-items-centre">
-                    <div class="header-top-social">
+                    <div class="header-top-social top">
                         <a href=""><i class="fab fa-facebook-square" aria-hidden="true"></i></a>
                         <a href=""><i class="fab fa-twitter" aria-hidden="true"></i></a>
                         <a href=""><i class="fab fa-instagram" aria-hidden="true"></i></a>
                         <a href=""><i class="fab fa-youtube" aria-hidden="true"></i></a>
                     </div>
                     <div class="logo-unit d-flex justify-content-between align-items-centre">
-                        <img src="./images/20200522_112057.png" alt="daksh-logo">
-                        <h1><span>DAKSH </span>STUDY CIRCLE</h1>
+                        <img src="./images/daksh-logo.png" alt="daksh-logo">
+                        <!-- <h1><span>DAKSH </span>STUDY CIRCLE</h1> -->
                     </div>
                     <div class="header-top-phone d-flex justify-content-between align-items-centre">
                         <i class="phone-icon"><img src="./images/phone-call.svg" alt="daksh-contact"></i>
@@ -366,7 +366,7 @@
             <div class="video-lectures">
                 <h1>Video lectures</h1>
                 <ul>
-                    <li><a href="">Basic Matks</a></li>
+                    <li><a href="">Basic Maths</a></li>
                     <li><a href="">9th Maths</a></li>
                     <li><a href="">10th Maths</a></li>
                     <li><a href="">11th Maths</a></li>
