updated all the links and made contact form working

--- a/index.html
+++ b/index.html
@@ -33,10 +33,14 @@
             <div class="container">
                 <div class="d-flex justify-content-between align-items-centre">
                     <div class="header-top-social top">
-                        <a href=""><i class="fab fa-facebook-square" aria-hidden="true"></i></a>
-                        <a href=""><i class="fab fa-twitter" aria-hidden="true"></i></a>
-                        <a href=""><i class="fab fa-instagram" aria-hidden="true"></i></a>
-                        <a href=""><i class="fab fa-youtube" aria-hidden="true"></i></a>
+                        <a href="https://www.facebook.com/Daksh-Study-Circle-210403489015823" target="_blank"><i
+                                class="fab fa-facebook-square" aria-hidden="true"></i></a>
+                        <a href="https://twitter.com/urdaksh?s=20" target="_blank"><i class="fab fa-twitter"
+                                aria-hidden="true"></i></a>
+                        <a href="https://www.instagram.com/dakshstudycircle/" target="_blank"><i
+                                class="fab fa-instagram" aria-hidden="true"></i></a>
+                        <a href="https://www.youtube.com/channel/UCkZgoRhjxTUkTyyS4XSrADw" target="_blank"><i
+                                class="fab fa-youtube" aria-hidden="true"></i></a>
                     </div>
                     <div class="logo-unit d-flex justify-content-between align-items-centre">
                         <img src="./images/daksh-logo.png" alt="daksh-logo">
@@ -57,34 +61,12 @@
         <div class="container">
             <nav class="navbar">
                 <ul class="d-flex justify-content-between align-items-centre">
-                    <li><a href="#home">Home</a>
-                        <div class="magic-line line-visible" style="max-width: 48.3px;"></div>
-                        <div class="magic-triangle triangle-visible"></div>
-                    </li>
-                    <li><a href="#courses">Courses</a>
-                        <div class="magic-line" style="max-width: 77.19px;"></div>
-                        <div class="magic-triangle" style="left: 37%;"></div>
-                    </li>
-                    <li><a href="#gallery">Gallery</a>
-                        <div class="magic-line" style="max-width: 73.10px;"></div>
-                        <div class="magic-triangle" style="left: 26.5%;"></div>
-                    </li>
-                    <li><a href="#video">Video</a>
-                        <div class="magic-line" style="max-width: 51.73px;"></div>
-                        <div class="magic-triangle" style="left: 46.5%;"></div>
-                    </li>
-                    <li><a href="#about">About Us</a>
-                        <div class="magic-line" style="max-width: 85.04px;"></div>
-                        <div class="magic-triangle" style="left: 56.5%;"></div>
-                    </li>
-                    <!-- <li><a href="#">Teachers</a>
-                        <div class="magic-line" style="max-width: 86.08px;"></div>
-                        <div class="magic-triangle" style="left: 68%;"></div>
-                    </li> -->
-                    <li><a href="#contact">Contact Us</a>
-                        <div class="magic-line" style="max-width: 106.03px;"></div>
-                        <div class="magic-triangle" style="left: 80.5%;"></div>
-                    </li>
+                    <li><a href="#home">Home</a></li>
+                    <li><a href="#courses">Courses</a></li>
+                    <li><a href="#gallery">Gallery</a></li>
+                    <li><a href="#video">Video</a></li>
+                    <li><a href="#about">About Us</a></li>
+                    <li><a href="#contact">Contact Us</a></li>
                 </ul>
             </nav>
         </div>
@@ -98,7 +80,7 @@
                 <h1> Ends Here !!! </h1>
             </div>
             <div class="explore-btn text-centre">
-                <a href="#"><span>Contact Us</span></a>
+                <a href="#contact"><span>Contact Us</span></a>
             </div>
         </div>
     </header>
@@ -154,7 +136,7 @@
                 Deserunt officia aperiam maiores nisi inventore architecto laborum nulla suscipit alias.
             </p>
             <div class="explore-btn explore-btn-message text-centre">
-                <a href="#"><span> Contact Us</span></a>
+                <a href="#contact"><span> Contact Us</span></a>
             </div>
         </div>
     </div>
@@ -531,7 +513,8 @@
             </p>
             <div class="info container">
                 <div class="loaction">
-                    <div class="circle"><a class="icon" href=""><i class="fas fa-map-marker-alt"></i></a></div>
+                    <div class="circle"><a class="icon" href="https://goo.gl/maps/4FfyLoDHbKVuLQB8A" target="_blank"><i
+                                class="fas fa-map-marker-alt"></i></a></div>
                     <div class="contact-text">
                         <p><span><strong>Daksh Study Circle</strong></span><br>
                             Shop No.H-2,Kalpatru Complex,Delhi Cantt, Sadar Bazaar, Delhi Cantonment, New Delhi,
@@ -541,15 +524,18 @@
                     </div>
                 </div>
                 <div class="phone">
-                    <div class="circle"><a class="icon" href=""><i class="fas fa-phone-alt"></i></a></div>
+                    <div class="circle"><a class="icon" href="tel:+91 9818824279" target="_blank"><i
+                                class="fas fa-phone-alt"></i></a>
+                    </div>
                     <div class="contact-text">
                         <p><strong>+91 9818824279</strong><br>
-                            <strong>+91 9818824279</strong>
+                            <strong>+91 9953005312</strong>
                         </p>
                     </div>
                 </div>
                 <div class="email">
-                    <div class="circle"><a href="" class="icon"><i class="fas fa-envelope"></i></a></div>
+                    <div class="circle"><a href="mailto:urdaksh@gmail.com" target="_blank" class="icon"><i
+                                class="fas fa-envelope"></i></a></div>
                     <div class="contact-text">
                         <p><strong>urdaksh@gmail.com</strong></p>
                     </div>
@@ -557,22 +543,23 @@
             </div>
 
             <div class="contact-form">
-                <form action="email" autocomplete="off">
+                <form action="mailto:urdaksh@gmail.com" method="POST" enctype="text/plain" autocomplete="off">
                     <h2>Send Us A Message</h2>
                     <div class="inputBox">
-                        <input type="text" name="" required="required" placeholder="Full Name">
+                        <input type="text" name="Full Name" required="required" placeholder="Full Name">
                     </div>
                     <div class="inputBox">
-                        <input type="email" name="" required="required" placeholder="Email">
+                        <input type="email" name="email" required="required" placeholder="Email">
                     </div>
                     <div class="inputBox">
-                        <input type="text" name="" required="required" placeholder="Phone">
+                        <input type="text" name="Phone" required="required" placeholder="Phone">
                     </div>
                     <div class="inputBox">
-                        <textarea required="required" placeholder="Type Your Message..." rows="5"></textarea>
+                        <textarea name="Message" required="required" placeholder="Type Your Message..."
+                            rows="5"></textarea>
                     </div>
                     <div class="inputBox">
-                        <input type="submit" name="" value="Send">
+                        <input type="submit" value="Send">
                     </div>
                 </form>
             </div>
@@ -596,31 +583,40 @@
             <div class="video-lectures">
                 <h1>Video lectures</h1>
                 <ul>
-                    <li><a href="">Basic Maths</a></li>
-                    <li><a href="">9th Maths</a></li>
-                    <li><a href="">10th Maths</a></li>
-                    <li><a href="">11th Maths</a></li>
-                    <li><a href="">12th Maths</a></li>
+                    <li><a href="https://youtube.com/playlist?list=PL1U-FkOAme7YKYV3l0377G8GQ81RLmcLL"
+                            target="_blank">Basic Maths</a></li>
+                    <li><a href="https://youtube.com/playlist?list=PL1U-FkOAme7ZKO5pLGJ11gvRWwgPKHy3g"
+                            target="_blank">9th Maths</a></li>
+                    <li><a href="https://youtube.com/playlist?list=PL1U-FkOAme7Zfuf7cDorbDMLDxJfEc6pM"
+                            target="_blank">10th Maths</a></li>
+                    <li><a href="https://youtube.com/playlist?list=PL1U-FkOAme7YhCHy2Lf5rd1m1QjDQ5H5A"
+                            target="_blank">11th Maths</a></li>
+                    <li><a href="https://youtube.com/playlist?list=PL1U-FkOAme7Z8fDk2XWvn-iGSdglsVkQy"
+                            target="_blank">12th Maths</a></li>
                 </ul>
             </div>
             <div class="quick-links">
                 <h1>Quick links</h1>
                 <ul>
-                    <li><a href="">Home</a></li>
-                    <li><a href="">Courses</a></li>
-                    <li><a href="">Gallery</a></li>
-                    <li><a href="">Video</a></li>
-                    <li><a href="">About Us</a></li>
+                    <li><a href="#home">Home</a></li>
+                    <li><a href="#courses">Courses</a></li>
+                    <li><a href="#gallery">Gallery</a></li>
+                    <li><a href="#video">Video</a></li>
+                    <li><a href="#about">About Us</a></li>
                 </ul>
             </div>
             <div class="social-networks">
                 <h1>Social Network</h1>
                 <ul>
-                    <li><a href=""><i class="fab fa-facebook-square" aria-hidden="true"></i></a></li>
-                    <li><a href=""><i class="fab fa-twitter" aria-hidden="true"></i></a></li>
-                    <li><a href=""><i class="fab fa-instagram" aria-hidden="true"></i></a></li>
-                    <li><a href=""><i class="fab fa-youtube" aria-hidden="true"></i></a></li>
-                    <li><a href=""><i class="fab fa-whatsapp-square" aria-hidden="true"></i></a></li>
+                    <li><a href="https://www.facebook.com/Daksh-Study-Circle-210403489015823" target="_blank"><i
+                                class="fab fa-facebook-square" aria-hidden="true"></i></a></li>
+                    <li><a href="https://twitter.com/urdaksh?s=20" target="_blank"><i class="fab fa-twitter"
+                                aria-hidden="true"></i></a></li>
+                    <li><a href="https://www.instagram.com/dakshstudycircle/" target="_blank"><i
+                                class="fab fa-instagram" aria-hidden="true"></i></a></li>
+                    <li><a href="https://www.youtube.com/channel/UCkZgoRhjxTUkTyyS4XSrADw" target="_blank"><i
+                                class="fab fa-youtube" aria-hidden="true"></i></a></li>
+                    <!-- <li><a href="" target="_blank"><i class="fab fa-whatsapp-square" aria-hidden="true"></i></a></li> -->
                 </ul>
             </div>
         </div>
@@ -632,7 +628,7 @@
                 <h1>Copyright ©
                     <span id="copyright">
                         <script>document.getElementById('copyright').appendChild(document.createTextNode(new Date().getFullYear()))</script>
-                    </span> Daksh Study Circle.
+                    </span> Daksh Study Circle. Made With ❤ By Krishan Kumar
                 </h1>
             </div>
         </div>
