updated expertise section

--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
             <nav class="navbar">
                 <ul class="d-flex justify-content-between align-items-centre">
                     <li><a href="#home">Home</a></li>
-                    <li><a href="#courses">Courses</a></li>
+                    <li><a href="#expertise">Expertise</a></li>
                     <li><a href="#gallery">Gallery</a></li>
                     <li><a href="#video">Video</a></li>
                     <li><a href="#about">About Us</a></li>
@@ -85,40 +85,35 @@
         </div>
     </header>
 
-    <!-- Courses -->
+    <!-- EXPERTISE -->
 
-    <div class="courses" id="courses">
-        <h1>Choose your class or stream</h1>
+    <div class="courses" id="expertise">
+        <h1>OUR EXPERTISE</h1>
         <div class="container d-flex justify-content-between align-items-centre paddinglr">
-            <div class="cards yellow">
-                <a href="#">
-                    <img src="./images/9.svg" alt="9th">
-                    <h3>9th</h3>
-                </a>
+            <div class="cards">
+                <img src="./images/svg/undraw_community_8nwl.svg" alt="9th">
+                <h3>Group Tutions</h3>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Facilis, nostrum?</p>
             </div>
-            <div class="cards" style="background-color: #307ad5;">
-                <a href="#">
-                    <img src="./images/SPRK_default_preset_name_custom – 1.svg" style="width: 115px;" alt="10th">
-                    <h3>10th</h3>
-                </a>
+            <div class="cards">
+                <img src="./images/svg/undraw_group_video_el8e.svg" alt="10th">
+                <h3>Online Classes</h3>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Facilis, nostrum?</p>
             </div>
-            <div class="cards light-blue">
-                <a href="#">
-                    <img src="./images/paint-palette.svg" alt="arts">
-                    <h3>Arts</h3>
-                </a>
+            <div class="cards">
+                <img src="./images/svg/undraw_Online_learning_re_qw08.svg" alt="arts">
+                <h3>Home Tutions</h3>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Facilis, nostrum?</p>
             </div>
-            <div class="cards green">
-                <a href="#">
-                    <img src="./images/microscope.svg" alt="science">
-                    <h3>Science</h3>
-                </a>
+            <div class="cards">
+                <img src="./images/svg/undraw_studying_s3l7.svg" alt="science">
+                <h3>Offline Classes</h3>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Facilis, nostrum?</p>
             </div>
-            <div class="cards" style="background-color: #d94da6;">
-                <a href="#">
-                    <img src="./images/bda433ad735d49f2ad7a9ee5f5d76deb.svg" alt="commerce">
-                    <h3>Commerce</h3>
-                </a>
+            <div class="cards">
+                <img src="./images/svg/undraw_teaching_f1cm.svg" alt="commerce">
+                <h3>1st-12th</h3>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Facilis, nostrum?</p>
             </div>
         </div>
     </div>
@@ -571,13 +566,13 @@
     <div class="footer">
         <div class="container d-flex justify-content-between">
             <div class="cousrses-link">
-                <h1>Courses</h1>
+                <h1>Our Expertise</h1>
                 <ul>
-                    <li><a href="">9th Class</a></li>
-                    <li><a href="">10th Class</a></li>
-                    <li><a href="">Arts</a></li>
-                    <li><a href="">Science</a></li>
-                    <li><a href="">commerce</a></li>
+                    <li><a href="#expertise">Group Tutions</a></li>
+                    <li><a href="#expertise">Online Classes</a></li>
+                    <li><a href="#expertise">Home Tutions</a></li>
+                    <li><a href="#expertise">Offline Classes</a></li>
+                    <li><a href="#expertise">1st-12th</a></li>
                 </ul>
             </div>
             <div class="video-lectures">
